--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -1,3 +1,6 @@
+@import "swiper/css";
+@import 'swiper/css/navigation';
+@import 'swiper/css/pagination';
 .journey {
     width: 100%;
     height: 100%;
@@ -169,72 +172,20 @@
 .fullscreen-icon {}
 
 .journey-slider {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    width: 100%;
-}
-
-.slider-next-btn,
-.slider-prev-btn {
-    height: 100%;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition-duration: 0.3s;
-    &:hover {
-        transform: scale(1.2);
-    }
-    @include media-breakpoint-down(md) {
-        display: none;
-    }
+    max-width: 1440px;
 }
 
 .slider {
     &__list {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        gap: 60px;
-        @include media-breakpoint-down(xxl) {
-            gap: 10px;
-        }
-        @include media-breakpoint-down(md) {
-            flex-direction: column;
-        }
+        margin-left: 50px;
     }
-    &__list-item {
-        display: flex;
-        max-width: 380px;
-        max-height: 220px;
-        width: 100%;
-        height: 10%;
-        @include media-breakpoint-down(md) {
-            max-width: 100%;
-        }
-    }
+    &__list-item {}
 }
 
-.slider-video {
-    display: flex;
-    min-height: 220px;
-    max-width: 100%;
-    // @include media-breakpoint-down(md) {
-    //     width: 100%;
-    // }
-}
+.slider-video {}
 
-.swiper {
-    width: 600px;
-    height: 300px;
-}
+.slider-prev-btn {}
 
-.swiper-wrapper {
-    width: 100%;
-    padding-left: 100px;
-    padding-right: 100px;
-}
+.slider-next-btn {}
+
+.slider-pagination {}
