--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -125,7 +125,7 @@
                     <img class="profile__avatar-img" src="./img/user/user.png" alt="" />
                     <label class="profile__avatar-btn" for="upload-img"> Upload picture </label>
                 </div>
-                <a class="profile__link" href="index.html">Delete account</a>
+                <a class="profile__link" href="register-page.html">Delete account</a>
                 <a class="profile__link" href="login-page.html">Log out</a>
             </div>
         </div>
