--- a/src/scss/_reboot.scss
+++ b/src/scss/_reboot.scss
@@ -1,31 +1,26 @@
 html,
 body {
-  margin-left: auto;
-  margin-right: auto;
-  min-height: 100vh;
-  min-width: 320px; // TODO
-  width: 100%;
-  font-family: "Roboto", sans-serif; // TODO
-  font-style: normal; // TODO
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 100vh;
+    min-width: 320px;
+    width: 100%;
+    font-family: "Roboto", sans-serif;
 }
 
 html {
-  &::-webkit-scrollbar {
-    -webkit-appearance: none;
-    border-radius: 100px;
-    width: 5px;
-  }
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--palette-primary-dark);
-    border-radius: 100px;
-  }
-  &::-webkit-scrollbar-track {
-    background-color: var(--palette-primary-main);
-  }
-}
-
-body {
-  overflow-x: hidden; // TODO
+    &::-webkit-scrollbar {
+        -webkit-appearance: none;
+        border-radius: 100px;
+        width: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--palette-primary-dark);
+        border-radius: 100px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: var(--palette-primary-main);
+    }
 }
 
 ul,
@@ -38,14 +33,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 li {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
